tests/style/bug_159_annotation_indent/expected_out.txt
=== PLAIN MODE ===
test_02.m: error: file is not auto-fixed because it contains parse errors
In test_02.m, line 4
|     %| pragma Justify (metrics, "cyc", "typo in tool");
|                        ^^^^^^^ error: unknown miss_hit tool 'metrics'
In test_04.m, line 5
|       %|                 "this is a multi-line " +
|       ^^ style: indentation not correct, should be 4 spaces, not 6 [fixed] [indentation]
In test_04.m, line 6
|       %|                 "justification");
|       ^^ style: indentation not correct, should be 4 spaces, not 6 [fixed] [indentation]
MISS_HIT Style Summary: 4 file(s) analysed, 2 style issue(s), 2 error(s)

=== HTML MODE ===
MISS_HIT Style Summary: 4 file(s) analysed, 2 style issue(s), 1 error(s)
